--- a/index.html
+++ b/index.html
@@ -14,27 +14,23 @@ body {
   min-height: 100vh;
   font-family: 'Poppins', sans-serif;
   text-align: center;
-  color: #5a3e36;
-
-  /* Romantic pastel gradient sky */
-  background: linear-gradient(to bottom, #ffe6f0, #ffd9e8, #fff0f5);
+  color: #f8e6e6;
+  background: radial-gradient(circle at top, #0d1b2a, #1b263b, #415a77);
   overflow-x: hidden;
   position: relative;
 }
 
-/* Floating soft hearts in background */
-.heart {
+/* Stars background */
+body::before {
+  content: '';
   position: absolute;
-  font-size: 18px;
-  opacity: 0.6;
-  animation: floatUp linear infinite;
-  color: #ffb6c1;
-}
-
-@keyframes floatUp {
-  0% { transform: translateY(100vh) scale(0.5); opacity: 0.4; }
-  50% { opacity: 0.7; }
-  100% { transform: translateY(-10vh) scale(1); opacity: 0; }
+  width: 100%;
+  height: 100%;
+  background: url('https://i.ibb.co/0m1tJrW/stars.png') repeat;
+  opacity: 0.4;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 /* Title */
@@ -42,7 +38,7 @@ h1 {
   font-family: 'Playfair Display', serif;
   font-size: 1.7rem;
   margin-top: 35px;
-  color: #b76e79;
+  color: #ffcad4;
   letter-spacing: 1px;
 }
 
@@ -60,29 +56,31 @@ h1 {
   max-width: 340px;
   height: 420px;
   object-fit: contain;
-  background: white;
   border-radius: 20px;
   padding: 6px;
-  box-shadow: 0 15px 35px rgba(183,110,121,0.25);
+  box-shadow: 0 15px 35px rgba(255,182,193,0.25);
   transition: transform 0.4s ease;
+  background: rgba(255,255,255,0.05);
 }
 
 .image-wrapper img:hover {
   transform: scale(1.03);
 }
 
-/* Romantic paragraph cards */
+/* Paragraph boxes (glassmorphism) */
 .love-box {
-  background: rgba(255,255,255,0.65);
-  margin: 18px auto;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255,182,193,0.3);
   padding: 22px;
   max-width: 650px;
+  margin: 18px auto;
   border-radius: 25px;
-  backdrop-filter: blur(10px);
-  box-shadow: 0 10px 30px rgba(183,110,121,0.15);
+  backdrop-filter: blur(8px);
+  box-shadow: 0 8px 25px rgba(255,182,193,0.15);
   font-size: 1.05rem;
   line-height: 1.7;
   position: relative;
+  color: #ffe6f0;
 }
 
 .love-box::after {
@@ -124,8 +122,23 @@ button {
   display: none;
   margin-top: 20px;
   font-size: 1.1rem;
-  color: #b76e79;
+  color: #ffcad4;
   font-weight: 500;
+}
+
+/* Floating stars animation */
+.star {
+  position: absolute;
+  color: #ffe6f0;
+  font-size: 14px;
+  opacity: 0.6;
+  animation: floatStar linear infinite;
+}
+
+@keyframes floatStar {
+  0% { transform: translateY(100vh) scale(0.5); opacity: 0.4; }
+  50% { opacity: 0.8; }
+  100% { transform: translateY(-10vh) scale(1); opacity: 0; }
 }
 
 </style>
@@ -180,21 +193,23 @@ You are my comfort, my safe place, my forever person.
 
 <p id="message">Forever yours… My Bava 💖🌙</p>
 
-<!-- Soft Romantic Music -->
+<!-- Romantic Night Music -->
 <audio id="bgAudio" loop>
   <source src="Love.mp3" type="audio/mpeg">
 </audio>
 
 <script>
-// Music
+// Music autoplay on scroll or touch
 const audio = document.getElementById("bgAudio");
 let started = false;
 audio.volume = 0.25;
+
 function startMusic(){
   if(!started){
     audio.play().then(()=> started=true).catch(()=>{});
   }
 }
+
 window.addEventListener("touchstart", startMusic);
 window.addEventListener("scroll", startMusic);
 
@@ -211,17 +226,17 @@ function moveButton() {
   btn.style.left = Math.random() * 80 + "%";
 }
 
-// Floating hearts in background
-function createHeart(){
-  const heart = document.createElement("div");
-  heart.className = "heart";
-  heart.innerText = "❤️";
-  heart.style.left = Math.random() * 100 + "vw";
-  heart.style.fontSize = (Math.random() * 20 + 10) + "px";
-  document.body.appendChild(heart);
-  setTimeout(()=> heart.remove(), 8000);
+// Floating stars in background
+function createStar(){
+  const star = document.createElement("div");
+  star.className = "star";
+  star.innerText = "✨";
+  star.style.left = Math.random() * 100 + "vw";
+  star.style.fontSize = (Math.random() * 20 + 10) + "px";
+  document.body.appendChild(star);
+  setTimeout(()=> star.remove(), 8000);
 }
-setInterval(createHeart, 500);
+setInterval(createStar, 400);
 
 </script>
 
