--- a/index.html
+++ b/index.html
@@ -8,42 +8,37 @@
 
 <style>
 
+/* Body - subtle romantic night theme */
 body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
   font-family: 'Poppins', sans-serif;
   text-align: center;
-  color: #f8e6e6;
-
-  /* Night sky background */
-  background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
-  background-size: cover;
+  color: #fff3f8;
+  background: linear-gradient(160deg, #1b1b2f, #2c2c44, #3e3e5e);
   overflow-x: hidden;
   position: relative;
 }
 
-/* Floating stars in background */
-.star {
-  position: absolute;
-  color: #ffe6f0;
-  font-size: 14px;
-  opacity: 0.6;
-  animation: floatStar linear infinite;
-}
-
-@keyframes floatStar {
-  0% { transform: translateY(100vh) scale(0.5); opacity: 0.4; }
-  50% { opacity: 0.8; }
-  100% { transform: translateY(-10vh) scale(1); opacity: 0; }
+/* Subtle glowing circles (bokeh effect) */
+body::before {
+  content: '';
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle, rgba(255,182,193,0.05) 2%, transparent 2%) repeat;
+  background-size: 50px 50px;
+  z-index: -1;
+  pointer-events: none;
 }
 
 /* Title */
 h1 {
   font-family: 'Playfair Display', serif;
-  font-size: 1.7rem;
+  font-size: 1.6rem;
   margin-top: 35px;
-  color: #ffcad4;
+  color: #ffb6c1;
   letter-spacing: 1px;
 }
 
@@ -60,19 +55,18 @@ h1 {
   width: 45%;
   max-width: 340px;
   height: 420px;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 20px;
   padding: 6px;
-  box-shadow: 0 15px 35px rgba(255,182,193,0.25);
+  box-shadow: 0 10px 25px rgba(255,182,193,0.25);
   transition: transform 0.4s ease;
-  background: rgba(255,255,255,0.05);
 }
 
 .image-wrapper img:hover {
   transform: scale(1.03);
 }
 
-/* Paragraphs with subtle glitter */
+/* Paragraphs - subtle glittering effect */
 p {
   max-width: 650px;
   margin: 18px auto;
@@ -84,9 +78,9 @@ p {
 }
 
 @keyframes glitter {
-  0% { text-shadow: 0 0 2px #ffe6f0, 0 0 5px #ffc0cb; }
-  50% { text-shadow: 0 0 4px #ffe6f0, 0 0 10px #ffb6c1; }
-  100% { text-shadow: 0 0 2px #ffe6f0, 0 0 5px #ffc0cb; }
+  0% { text-shadow: 0 0 1px #ffe6f0, 0 0 2px #ffb6c1; }
+  50% { text-shadow: 0 0 3px #ffe6f0, 0 0 6px #ff9ebf; }
+  100% { text-shadow: 0 0 1px #ffe6f0, 0 0 2px #ffb6c1; }
 }
 
 /* Buttons */
@@ -119,8 +113,23 @@ button {
   display: none;
   margin-top: 20px;
   font-size: 1.1rem;
-  color: #ffcad4;
+  color: #ffb6c1;
   font-weight: 500;
+}
+
+/* Floating stars in background */
+.star {
+  position: absolute;
+  color: #ffe6f0;
+  font-size: 12px;
+  opacity: 0.5;
+  animation: floatStar linear infinite;
+}
+
+@keyframes floatStar {
+  0% { transform: translateY(100vh) scale(0.5); opacity: 0.3; }
+  50% { opacity: 0.6; }
+  100% { transform: translateY(-10vh) scale(1); opacity: 0; }
 }
 
 </style>
@@ -138,15 +147,10 @@ button {
 
 <!-- Romantic paragraphs -->
 <p>From childhood memories… 👶 to becoming husband & wife… 💍 Our story was written by destiny.</p>
-
 <p>This is our <b>first Valentine’s Day after marriage</b>, and I wanted to do something special just for you.</p>
-
 <p>We’ve known each other since childhood… grew up as <b>bava & maradalu</b>, and destiny decided, <b>“These two belong together.”</b></p>
-
 <p>Yes, we fight. Yes, we get angry. Yes, we hurt each other sometimes.</p>
-
 <p>But even after all that, <b>I still choose you. Every single day.</b></p>
-
 <p>You are my comfort, my safe place, my forever person. ❤️ I LOVE YOU ❤️</p>
 
 <!-- Buttons -->
@@ -158,23 +162,21 @@ button {
 
 <p id="message">Forever yours… My Bava 💖🌙</p>
 
-<!-- Romantic Night Music -->
+<!-- Romantic Music -->
 <audio id="bgAudio" loop>
   <source src="Love.mp3" type="audio/mpeg">
 </audio>
 
 <script>
-// Music autoplay on scroll or touch
+// Music autoplay
 const audio = document.getElementById("bgAudio");
 let started = false;
 audio.volume = 0.25;
-
 function startMusic(){
   if(!started){
     audio.play().then(()=> started=true).catch(()=>{});
   }
 }
-
 window.addEventListener("touchstart", startMusic);
 window.addEventListener("scroll", startMusic);
 
@@ -191,13 +193,13 @@ function moveButton() {
   btn.style.left = Math.random() * 80 + "%";
 }
 
-// Floating stars in background
+// Floating stars
 function createStar(){
   const star = document.createElement("div");
   star.className = "star";
   star.innerText = "✨";
   star.style.left = Math.random() * 100 + "vw";
-  star.style.fontSize = (Math.random() * 20 + 10) + "px";
+  star.style.fontSize = (Math.random() * 18 + 8) + "px";
   document.body.appendChild(star);
   setTimeout(()=> star.remove(), 8000);
 }
