--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
 
 <style>
-
-/* Body - subtle romantic night theme */
+/* Body: full screen sweet romantic theme */
 body {
   margin: 0;
   padding: 0;
@@ -16,61 +15,64 @@ body {
   font-family: 'Poppins', sans-serif;
   text-align: center;
   color: #fff3f8;
-  background: linear-gradient(160deg, #1b1b2f, #2c2c44, #3e3e5e);
+  background: linear-gradient(145deg, #ffdde1, #ee9ca7, #ffdde1);
   overflow-x: hidden;
   position: relative;
 }
 
-/* Subtle glowing circles (bokeh effect) */
-body::before {
-  content: '';
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(circle, rgba(255,182,193,0.05) 2%, transparent 2%) repeat;
-  background-size: 50px 50px;
-  z-index: -1;
-  pointer-events: none;
+/* Floating sparkle effect */
+.sparkle {
+  position: absolute;
+  color: #ffe6f0;
+  font-size: 10px;
+  opacity: 0.6;
+  animation: sparkleAnim linear infinite;
+}
+
+@keyframes sparkleAnim {
+  0% { transform: translateY(100vh) scale(0.5); opacity: 0.3; }
+  50% { opacity: 0.7; }
+  100% { transform: translateY(-10vh) scale(1); opacity: 0; }
 }
 
 /* Title */
 h1 {
   font-family: 'Playfair Display', serif;
-  font-size: 1.6rem;
-  margin-top: 35px;
-  color: #ffb6c1;
+  font-size: 1.8rem;
+  margin-top: 25px;
+  color: #ff6f91;
   letter-spacing: 1px;
 }
 
-/* Image Section */
+/* Image wrapper: side by side, fit same size */
 .image-wrapper {
   display: flex;
   justify-content: center;
   gap: 25px;
   flex-wrap: wrap;
-  margin: 35px 15px;
+  margin: 30px 10px;
 }
 
 .image-wrapper img {
   width: 45%;
-  max-width: 340px;
-  height: 420px;
-  object-fit: cover;
+  max-width: 350px;
+  height: 400px;
+  object-fit: contain; /* ensures image fully fits, no cropping */
   border-radius: 20px;
-  padding: 6px;
   box-shadow: 0 10px 25px rgba(255,182,193,0.25);
   transition: transform 0.4s ease;
+  background: rgba(255,255,255,0.1);
 }
 
 .image-wrapper img:hover {
   transform: scale(1.03);
 }
 
-/* Paragraphs - subtle glittering effect */
+/* Paragraphs with subtle glitter */
 p {
-  max-width: 650px;
-  margin: 18px auto;
-  font-size: 1.05rem;
+  max-width: 700px;
+  margin: 15px auto;
+  font-size: 1.1rem;
   line-height: 1.7;
   color: #ffe6f0;
   position: relative;
@@ -85,7 +87,7 @@ p {
 
 /* Buttons */
 .buttons {
-  margin-top: 30px;
+  margin-top: 25px;
 }
 
 button {
@@ -113,25 +115,9 @@ button {
   display: none;
   margin-top: 20px;
   font-size: 1.1rem;
-  color: #ffb6c1;
+  color: #ff6f91;
   font-weight: 500;
 }
-
-/* Floating stars in background */
-.star {
-  position: absolute;
-  color: #ffe6f0;
-  font-size: 12px;
-  opacity: 0.5;
-  animation: floatStar linear infinite;
-}
-
-@keyframes floatStar {
-  0% { transform: translateY(100vh) scale(0.5); opacity: 0.3; }
-  50% { opacity: 0.6; }
-  100% { transform: translateY(-10vh) scale(1); opacity: 0; }
-}
-
 </style>
 </head>
 
@@ -145,7 +131,7 @@ button {
   <img src="IMG_6203.jpeg" alt="Our Love">
 </div>
 
-<!-- Romantic paragraphs -->
+<!-- Paragraphs -->
 <p>From childhood memories… 👶 to becoming husband & wife… 💍 Our story was written by destiny.</p>
 <p>This is our <b>first Valentine’s Day after marriage</b>, and I wanted to do something special just for you.</p>
 <p>We’ve known each other since childhood… grew up as <b>bava & maradalu</b>, and destiny decided, <b>“These two belong together.”</b></p>
@@ -162,7 +148,7 @@ button {
 
 <p id="message">Forever yours… My Bava 💖🌙</p>
 
-<!-- Romantic Music -->
+<!-- Soft romantic music -->
 <audio id="bgAudio" loop>
   <source src="Love.mp3" type="audio/mpeg">
 </audio>
@@ -172,6 +158,7 @@ button {
 const audio = document.getElementById("bgAudio");
 let started = false;
 audio.volume = 0.25;
+
 function startMusic(){
   if(!started){
     audio.play().then(()=> started=true).catch(()=>{});
@@ -193,17 +180,17 @@ function moveButton() {
   btn.style.left = Math.random() * 80 + "%";
 }
 
-// Floating stars
-function createStar(){
-  const star = document.createElement("div");
-  star.className = "star";
-  star.innerText = "✨";
-  star.style.left = Math.random() * 100 + "vw";
-  star.style.fontSize = (Math.random() * 18 + 8) + "px";
-  document.body.appendChild(star);
-  setTimeout(()=> star.remove(), 8000);
+// Floating sparkles
+function createSparkle(){
+  const sparkle = document.createElement("div");
+  sparkle.className = "sparkle";
+  sparkle.innerText = "✨";
+  sparkle.style.left = Math.random() * 100 + "vw";
+  sparkle.style.fontSize = (Math.random() * 18 + 8) + "px";
+  document.body.appendChild(sparkle);
+  setTimeout(()=> sparkle.remove(), 8000);
 }
-setInterval(createStar, 400);
+setInterval(createSparkle, 400);
 
 </script>
 
