--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ html, body {
 
 <body>
 
-<h1>Happy First Valentine My Love ❤️</h1>
+<h1>Happy Valentine ❤️</h1>
 
 <!-- Slideshow Images -->
 <div class="slideshow-container">
@@ -161,10 +161,10 @@ html, body {
 <!-- Paragraphs with stickers -->
 <p>From childhood memories… 👶 to becoming husband & wife… 💍 Our story was written by destiny. <span class="sticker">💖</span></p>
 <p>This is our first Valentine’s Day after marriage, and I wanted to do something special just for you. <span class="sticker">🌹</span></p>
-<p>We’ve known each other since childhood… grew up as bava & maradalu, and destiny decided, “These two belong together.” <span class="sticker">✨</span></p>
+<p>We’ve known each other since childhood… grew up together, and destiny decided, “These two belong together.” <span class="sticker">✨</span></p>
 <p>Yes, we fight. Yes, we get angry. Yes, we hurt each other sometimes. <span class="sticker">💌</span></p>
 <p>But even after all that, I still choose you. Every single day. <span class="sticker">❤️</span></p>
-<p>You are my comfort, my safe place, my forever person. ❤️ I LOVE YOU ❤️ <span class="sticker">💫</span></p>
+<p>You are my comfort, my safe place, my forever person. <br> ❤️ I LOVE YOU ❤️ <span class="sticker">💫</span></p>
 
 <!-- Buttons -->
 <div class="buttons">
