--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@ html, body {
 <div class="slideshow-container">
   <img src="IMG_3043.jpeg" class="slide active" alt="Childhood Memory">
   <img src="IMG_6203.jpeg" class="slide" alt="Our Love">
+  <img src="copy_E967CF39-8902-412D-9BCF-DF0B1B33779B.jpeg" class="slide" alt="Our Love">
+  <img src="IMG_6353.jpeg" class="slide" alt="Our Love">
+  <img src="DC50BC5B-82BF-406A-A110-C472D83BCFA7.mov" class="slide" alt="Our Love">
+    
 </div>
 
 <!-- Paragraphs with stickers -->
